resources/page.css
div.code,
pre
{
  background-color: #f5f5ff;
  border: solid #e5e5ee 1px;
}

body
{
  font-family: sans-serif;
  font-size: 0.95em;
  margin: 0 0 0 2em;
  padding: 0;
}

h1, h2, h3, h4, h5, h6
{
  font-family: sans-serif;
  color: #535388;
}

article
{
  margin: 0;
  width: 35em;
  text-align: justify;
}

article > h1
{ font-size: 2.2em }

article > h2,
article > section > h1
{ font-size: 1.6em }

article > h3,
article > section > h2,
article > section > section > h1
{ font-size: 1.3em }

article > h4,
article h5,
article h6,
article > section > h3,
article > section > section > h2,
article > section > section > section > h1
{ font-size: 1em }

article > h1
{
  color: white;
  background-color: #9393aa;
  margin: 0;
  padding: 0.5em 0 0.8em 0;
  text-align: center;
}

div#outline
{
  position: fixed;
  top: 2em;
  left: 37.5em;
}

div#outline > ol
{ font-size: 0.8em }

div#outline ol
{
  margin-left: 0;
  padding-left: 1em;
  list-style-type: none;
}

div#outline ol ol ol ol
{
  display: none;
}

div#outline a
{
  text-decoration: none;
}

